Update h5ai.conf: return *.keys, *.gpg files as text/plain

--- a/config/h5ai.conf
+++ b/config/h5ai.conf
@@ -53,4 +53,9 @@ server {
         alias /var/www/challenges/;
         try_files $uri =404;
     }
+    
+    types {
+        text/plain keys;
+        text/plain gpg;
+    }
 }
