Update h5ai.conf: Using 'Content-Disposition'

--- a/config/h5ai.conf
+++ b/config/h5ai.conf
@@ -54,9 +54,7 @@ server {
         try_files $uri =404;
     }
     
-    types {
-        text/plain keys;
-        text/plain gpg;
-        text/plain asc;
+    location ~* .(asc|keys)$ {
+        add_header 'Content-Disposition' 'inline';
     }
 }
